2016-01-06  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Allow Clang to build the gcc plugin.
	* GCCCallbacks.cpp: Fix warnings when building with Clang.
	* GCCPlugin.cpp: Likewise.

2016-01-06  Edward Jones  <ed.jones@embecosm.com>

	* GCCCallbacks.cpp (mageecFinishFile): Updated to reflect changes
	in the interface to add a pass sequence.

2016-01-05  Edward Jones  <ed.jones@embecosm.com>

	* FeatureExtract.cpp (featureExtractExecute): Saving of features
	in the database moved to mageecFinishFile in GCCCallbacks.cpp.
	Feature extraction now per function.
	* GCCCallbacks (mageecFinishFile): Save features and the pass
	sequence in the database.
	(mageecPassGate): Record passes as they are executed to be stored
	in the database.
	* MAGEECPlugin.h (MAGEECContext::features): Renamed to func_features,
	now stores a feature set for each function.
	(MAGEECContext::passes): Renamed to func_passes, now stores a pass
	sequence for each function.

2016-01-04  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Allow older versions of CMake to be used for
	building. Install the gcc plugin.

2015-12-17  Edward Jones  <ed.jones@embecosm.com>

	* FeatureExtract.cpp: Replace MAGEEC_MSG uses with MAGEEC_STATUS.
	* GCCCallbacks.cpp: Likewise.
	* MAGEECPlugin.h (MAGEEC_PREFIX MAGEEC_MSG MAGEEC_ERR)
	(MAGEEC_WARN): Macros moved into MAGEEC's Util.h.
	* PluginInfo.cpp: Use MAGEEC_DBG macro.

2015-12-17  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Renamed mageec_lib to mageec_core.

2015-10-30  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Link target against mageec_lib instead of mageec
	as the library target has been renamed.
	* FeatureExtract.cpp: Save extracted features in the database.
	* GCCPlugin.cpp (parseArguments): with_save_features now set
	correctly when save_features flag is provided.
	mageec_context.database is now initialized correctly.

2015-10-29  Edward Jones  <ed.jones@embecosm.com>
